--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                         <h5>Variables</h5>
                     </figcaption>
                 </a>
-                <a id="version-control-system" class="flex-items" href="#" target="_blank">
+                <a id="version-control-system" class="flex-items" href="https://clabel95.github.io/Project-1/" target="_blank">
                     <figcaption class="other-apps">
-                        <h3>coming soon</h3>
-                        <h5>coming soon</h5>
+                        <h3>project-1</h3>
+                        <h5>VINformation</h5>
                     </figcaption>
                 </a>
                 <a id="landing-page" class="flex-items" href="https://sahanamai.github.io/mini-project-1/"
