added project links

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <li><a class="section-links" href="#about-me">About Me</a></li>
                 <li><a class="section-links" href="#work">Work</a></li>
                 <li><a class="section-links" href="#contact-me">Contact Me</a></li>
-                <li><a class="section-links" href="https://www.linkedin.com/in/sahana-j-v-82687161/"
-                        target="_blank">LinkedIn</a></li>
+                <li><a class="section-links" href="./assets/css/images/Sahana_Vijayakumar_Resume .pdf.PDF" target="_blank">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -30,50 +29,46 @@
         <section id="about-me">
             <h1>About<br> Me</h1>
             <p>
-                I am a young professional from India, currently enrolled at
-                University Of Austin Coding Bootcamp to become a Full
+                I'm a graduated student from Anna University(India)with Master in computer Science
+                and Engineering, currently enrolled at University Of Austin Coding Bootcamp to become a Full
                 Stack Web Developer, with advanced skills in technologies like HTML,
                 CSS, JavaScript, Git, APIs,mySQL, React.js, Node.js.
                 <br>
-                
-                On the other hand, I'm a graduated student from Anna University(India)with Master in computer Science
-                and Engineering, university rank holder, and worked as an Assistant Professor for Computer Science
-                Engineering Department.
             </p>
         </section>
         <section id="work">
             <h1>Work</h1>
             <div id="apps">
-                <a id="css-cheat-sheet" class="flex-items" href="assets/css/images/01-app-desktop.png" target="_blank">
-                    
+                <a id="project1" class="flex-items" href="https://clabel95.github.io/Project-1/" target="_blank">
+
                     <figcaption id="principal-app">
-                        <h3>Cheat Sheet</h3>
-                        <h5>CSS Snippet Selector<h5>
+                        <h3>Project-1</h3>
+                        <h5>VINformation<h5>
                     </figcaption>
                 </a>
-                <a id="html" class="flex-items" href="https://sahanamai.github.io/html-css-homework/" target="_blank">
-                    <figcaption class="other-apps">
-                        <h3>HTML</h3>
-                        <h5>Code Refactor</h5>
-                    </figcaption>
-                </a>
-                <a id="css" class="flex-items" href="#" target="_blank">
-                    <figcaption class="other-apps">
-                        <h3>CSS</h3>
-                        <h5>Variables</h5>
-                    </figcaption>
-                </a>
-                <a id="version-control-system" class="flex-items" href="https://clabel95.github.io/Project-1/" target="_blank">
-                    <figcaption class="other-apps">
-                        <h3>project-1</h3>
-                        <h5>VINformation</h5>
-                    </figcaption>
-                </a>
-                <a id="landing-page" class="flex-items" href="https://sahanamai.github.io/mini-project-1/"
+                <a id="workdayscheduler" class="flex-items" href="https://sahanamai.github.io/third-party-api-homework/"
                     target="_blank">
                     <figcaption class="other-apps">
-                        <h3>Landing Page</h3>
-                        <h5>My Website</h5>
+                        <h3>work-day scheduler</h3>
+                        <h5>work day scheduler website</h5>
+                    </figcaption>
+                </a>
+                <a id="codequiz" class="flex-items" href="https://sahanamai.github.io/Code-Quiz/" target="_blank">
+                    <figcaption class="other-apps">
+                        <h3>Code-Quiz</h3>
+                        <h5>Code-quiz website</h5>
+                    </figcaption>
+                </a>
+                <a id="project2" class="flex-items" href="https://garden-proud-2022.herokuapp.com/" target="_blank">
+                    <figcaption class="other-apps">
+                        <h3>project-2</h3>
+                        <h5>Garden Proud</h5>
+                    </figcaption>
+                </a>
+                <a id="project3" class="flex-items" href="#" target="_blank">
+                    <figcaption class="other-apps">
+                        <h3>project-3</h3>
+                        <h5>coming soon</h5>
                     </figcaption>
                 </a>
             </div>
@@ -85,7 +80,7 @@
         <nav id="footer-links">
             <ul>
 
-                <li>sahanamai@gmail.com</li>
+                <li><a class="contact-links" href="mailto:sahanamai@gmail.com">Email</a></li>
                 <li><a class="contact-links" href="https://github.com/sahanamai" target="_blank">GitHub</a></li>
                 <li><a class="contact-links" href="https://www.linkedin.com/in/sahana-j-v-82687161/">Linkdeln</a></li>
 
